fix bug on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,17 @@
 .two > img {
     width: 100%;
 }
+
+@media (max-width:760px) {
+    .two > img {
+        display: none;
+    }
+    .tdimg {
+        display: none;
+        width: 0%;
+        padding: 0;
+    }
+    .tdcontent {
+        width: 100%;
+    }
+}
